# discord-qa-scrapper

./: .gitignore  LICENSE  README.md
chat_processor/: chat_thread_processor.py  processor.py
deprecated-code-scraper/: .env.example  .gitignore  deprecated_code.json  scraper.py
discord-getter/: .env.example  Cargo.toml  build.rs  output.csv
discord-getter/src/: constants.rs  lib.rs  main.rs
discord-getter/src/handler/: messages.rs  mod.rs  ready.rs  threads.rs
notebooks/: Chat-Archived-Threads.ipynb  Chat-Message-Processor.ipynb  Thread-Processor.ipynb  process_json_files.py  thread_processer.py  thread_processor.py
python_scraper/: .gitignore  main.ipynb  main.py  requirements.txt
thread_processor/: active_processor.py  archived_processor.py
thread_scraper/: .env.example  main.py
